# HILIPS

./: .gitignore  AGENTS.md  CLAUDE.md  LABELING_GUIDE.md  LICENSE  README.md  SOFTWARE_FUNCTIONALITIES.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  config.py  gemini_segmentation.py  main.py  main.py.bak  pyproject.toml  requirements.txt
backend/models/: __init__.py  sam2_loader.py
backend/notebooks/: yolo_inference_example.ipynb  yolo_segmentation_inference.ipynb  yolo_segmentation_training.ipynb  yolo_training_example.ipynb
backend/routers/: __init__.py  active_learning.py  annotations.py  coldstart.py  evaluation.py  experiments.py  human_in_loop.py  images.py  models.py  scheduler.py  segmentation.py  training.py  workflow.py
backend/samples/: README.md
backend/samples/annotations/: 13_on_coco.json  1_off_coco.json  1_on_coco.json  2_on_coco.json  33_on_coco.json  42_on_coco.json  46_off_coco.json  56_off_coco.json  60_on_coco.json  6_on_coco.json
backend/schemas/: __init__.py  requests.py
backend/services/: __init__.py  __init__.py.bak  active_learning.py  coco_service.py  experiment_log.py  llm_sam_pipeline.py  metrics_map.py  model_registry.py  pascal_voc_service.py  test_set.py  workflow_scheduler.py  workflow_state.py  yolo_service.py
backend/utils/: __init__.py  gpu_memory.py  mask_utils.py
frontend/: .dockerignore  Dockerfile  README.md  next.config.mjs  package.json  pnpm-lock.yaml
frontend/components/: api-status-monitor.tsx  class-manager.tsx  (+10 more)
keti-labeling/: .gitignore  AGENTS.md  README.md  package.json
(+24 files in other folders)
