[project]
name = "hilips-backend"
version = "1.0.0"
description = "HILIPS — Human-In-the-Loop Image Labeling Pipeline (FastAPI backend)"
authors = [
    { name = "Taehyung Noh", email = "yestaehyung@hanyang.ac.kr" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "image-labeling",
    "human-in-the-loop",
    "segmentation",
    "object-detection",
    "mllm",
    "sam2",
    "yolov8",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

[project.urls]
Homepage = "https://github.com/yestaehyung/HILIPS"
Repository = "https://github.com/yestaehyung/HILIPS"
Issues = "https://github.com/yestaehyung/HILIPS/issues"
